syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.test";
option java_outer_classname = "GrpcProtoTest";

package grpcTest;

service GrpcServicePj {
  rpc GrpcTest (GrpcRequest) returns (GrpcResponse);
}

message GrpcRequest {
  string request = 1;
}

message GrpcResponse {
  string response = 1;
}
